# united-passing-efficiency-24-25

./: LICENSE  Passing 2024-2025 Manchester United - Passing.csv  README.md  analyze_mediocampo.py  app.py  clean_data.py  data_load.py  extract_data.py  passing.csv  plot_pases.py  pyproject.toml  reporte_mediocampo.csv  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/raw/: passing_players.csv  passing_timeline.csv  pl_teams.csv
src/streamlit/: dashboard_data.py  dashboard_plots.py
src/united_passing/: __init__.py  analysis.py  data.py  plot.py
src/united_passing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_clean_data.py  test_data.py  test_data_load.py
