[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "united_passing"
version = "0.1.0"
authors = [
  { name="Alvaro Salinas Ortiz", email="alvarosalinasortiz@gmail.com" },
]
description = "Análisis de eficiencia de pases del Manchester United"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
]

[project.urls]
"Homepage" = "https://github.com/alvarosalinaso/united-passing-efficiency-24-25"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
